# flet_example_extension_module1

./: pyproject.toml
flet_extensions/: calculator.py
