[tool.poetry]
name = "example_module1"
version = "0.1.0"
description = "A simple example module for testing with flet"
authors = ["Anthony Uphof <auphof@gmail.com>"]


packages = [
    { include = "flet_extensions", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
